# code-interpreter

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
code_interpreter/: main.py
